--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "clsx": "^2.1.1",
+    "fetch": "^1.1.0",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
