--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/postgres": "^0.9.0",
     "clsx": "^2.1.1",
     "fetch": "^1.1.0",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
+    "react-draggable": "^4.4.6",
     "tailwind-merge": "^2.4.0",
     "uuid": "^10.0.0",
     "zustand": "^4.5.4"
