--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@vercel/postgres": "^0.9.0",
     "clsx": "^2.1.1",
     "fetch": "^1.1.0",
+    "framer-motion": "^11.3.24",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
