--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-draggable": "^4.4.6",
+    "react-spinners": "^0.14.1",
     "tailwind-merge": "^2.4.0",
     "uuid": "^10.0.0",
     "zustand": "^4.5.4"
