--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "clsx": "^2.1.1",
     "fetch": "^1.1.0",
     "framer-motion": "^11.3.24",
-    "next": "14.2.5",
+    "next": "^14.2.17",
     "react": "^18",
     "react-dom": "^18",
     "react-draggable": "^4.4.6",
